--- a/src/views/responses.ejs
+++ b/src/views/responses.ejs
@@ -1,6 +1,6 @@
 <%- include("template/header.ejs") %>
   <div class="content-wrapper">
-    <div style="height: 85vh; padding-top: 10px; padding-bottom: 10px" class="container-fluid">
+    <div style="padding-top: 10px; padding-bottom: 10px" class="container-fluid">
       <div class="div-center">
         <h1>Respuestas automáticas</h1>
       </div>
