--- a/src/views/template/editModal1.ejs
+++ b/src/views/template/editModal1.ejs
@@ -17,6 +17,10 @@
             <label for="exampleInputPhone1">Teléfono</label>
             <input type="Phone" class="form-control" id="exampleInputPhone1" placeholder="Editar teléfono" />
           </div>
+          <button type="button" id="modalbtnDelete" class="btn btn-block btn-danger btn-sm mt-0"
+            onclick="deleteDelivery('')">
+            Eliminar
+          </button>
         </div>
       </div>
       <div class="modal-footer">
