--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,6 +10,9 @@
                             <h3 class="card-title">ChatBot - <span class="client_name">Seleccione una
                                     conversación</span></h3>
                             <div class="card-tools" bis_skin_checked="1">
+                                <button onclick="openSale()" id="option_sale" style="margin-right: 10px;"
+                                    class="btn btn-sm btn-success">Abrir
+                                    una venta.</button>
                                 <span id="status_new_sms" title="Chats disponibles" class="badge bg-success">0</span>
                                 <button type="button" class="btn btn-tool" data-card-widget="maximize"><i
                                         class="fas fa-expand"></i>
@@ -122,7 +125,7 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="card card-success shadow-sm" bis_skin_checked="1">
+                    <div class="card card-primary shadow-sm" bis_skin_checked="1">
                         <div class="card-header" bis_skin_checked="1">
                             <h3 class="card-title">Área de lectura</h3>
                             <div class="card-tools" bis_skin_checked="1">
@@ -136,7 +139,8 @@
                         <div class="card-body" bis_skin_checked="1">
                             <p>Id del cliente: <span class="client_id text-data"></span></p>
                             <p>Nombre del cliente: <span class="client_name text-data"></span></p>
-                            <p>Dirección del cliente: <span class="client_address text-data"></span></p>
+                            <p>Dirección del cliente: <span class="client_address text-data"></span><br><small
+                                    id="client-extra-address-small" class="text-danger"></small></p>
                             <p>Link de ubicacion:</p>
                             <div class="form-group">
                                 <textarea class="client_location text-data form-control" disabled></textarea>
@@ -146,12 +150,12 @@
                                 <textarea class="client_observations text-data form-control" disabled></textarea>
                             </div>
                             <button onclick="editClientModalBootstrap.show();" disabled id="edit-client-chat-view"
-                                class="btn btn-success">Editar</button>
+                                class="btn btn-primary">Editar</button>
                         </div>
 
                     </div>
 
-                    <div class="card card-success shadow-sm" bis_skin_checked="1">
+                    <div class="card card-secondary shadow-sm" bis_skin_checked="1">
                         <div class="card-header" bis_skin_checked="1">
                             <h3 class="card-title">Cierre de venta</h3>
                             <div class="card-tools" bis_skin_checked="1">
@@ -163,18 +167,8 @@
                         </div>
 
                         <div class="card-body" bis_skin_checked="1">
-                            <div class="form-group">
-                                <label>Repartidor</label>
-                                <select id="select-delivery" class="form-control select2" style="width: 100%;">
-                                    <option selected value="0">Seleccione un repartidor</option>
-                                    <% for(var i=0; i<deliverys.length; i++) {%>
-                                        <option value="<%=deliverys[i].DelId%>">
-                                            <%=deliverys[i].DelName%>
-                                        </option>
-                                        <% } %>
-                                </select>
-                            </div>
-                            <button onclick="closeModalBootstrap.show();" class="btn btn-success">Cerrar
+                            <button onclick="closeModalBootstrap.show();" id="close_sale"
+                                class="btn btn-secondary">Cerrar
                                 venta</button>
                         </div>
 
