--- a/src/views/template/footer.ejs
+++ b/src/views/template/footer.ejs
@@ -38,7 +38,6 @@
         <script src="/plugins/jquery/jquery.min.js"></script>
         <script>
             window.addEventListener("unload", function () {
-                // Limpiar la caché de sesión cuando el usuario abandona la página
                 sessionStorage.clear();
             });
         </script>
@@ -48,7 +47,7 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="/dist/js/adminlte.min.js?v=3.2.0"></script>
         <script src="/plugins/sweetalert2/sweetalert2.all.min.js"></script>
-        <script src="/plugins/datatables/jquery.dataTables.min.js"></script>
+        <script src="/plugins/datatables/jquery.dataTables.js"></script>
         <script src="/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
         <script src="/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
         <script src="/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
