--- a/src/views/template/footer.ejs
+++ b/src/views/template/footer.ejs
@@ -46,7 +46,7 @@
         <script src="/plugins/toastr/toastr.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/dist/js/adminlte.min.js?v=3.2.0"></script>
-        <script src="/plugins/sweetalert2/sweetalert2.all.min.js"></script>
+        <script src="/plugins/sweetalert2/sweetalert2.min.js"></script>
         <script src="/plugins/datatables/jquery.dataTables.js"></script>
         <script src="/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
         <script src="/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
