--- a/src/views/template/header.ejs
+++ b/src/views/template/header.ejs
@@ -17,6 +17,8 @@
   <link rel="stylesheet" href="/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
   <link rel="stylesheet" href="/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
   <link rel="stylesheet" href="/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+  <link rel="stylesheet" href="/plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css">
+
   <link rel="shortcut icon" href="/dist/img/favicon.png" type="image/x-icon" />
 </head>
 
