Fix headleas and login view

--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -23,7 +23,7 @@
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Inicia sesión para iniciar tu sesión</p>
                 <div class="input-group mb-3">
-                    <input type="text" id="user" value="admin" class="form-control" placeholder="Usuario">
+                    <input type="text" id="user" value="" class="form-control" placeholder="Usuario">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-envelope"></span>
@@ -31,8 +31,7 @@
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" id="password" value="Advertencia123#" class="form-control"
-                        placeholder="Contraseña">
+                    <input type="password" id="password" value="" class="form-control" placeholder="Contraseña">
                     <div class="input-group-append">
                         <div class="input-group-text">
                             <span class="fas fa-lock"></span>
